--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -70,10 +70,11 @@
         {%- elsif entry.type == 'twitter' -%}
           https://twitter.com/{{ site.twitter.username }}
         {%- elsif entry.type == 'email' -%}
-          {% assign email = site.social.email | split: '@' %}
-          javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
+        mailto:{{ site.social.email }}
         {%- elsif entry.type == 'rss' -%}
           {{ "/feed.xml" | relative_url }}
+        {%- elsif entry.type == 'instagram' -%}
+          https://instagram.com/{{ site.instagram.username }}
         {%- else -%}
           {{ entry.url }}
         {%- endif -%}
