--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,6 +35,10 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   font-size: .85em;
 }
 
+.item-details {
+  font-style: italic;
+}
+
 .flex-container {
   display: flex;
   flex-direction: row;
