--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,7 @@
             title="{{ site.data.locales[site.lang].copyright.verbose }}">{{ site.data.locales[site.lang].copyright.brief }}</span>
           {% endif %}
         </p>
+        <p class="mb-0"><a href="/privacy-policy.html">Privacy Policy</a></p>
       </div>
 
       <div class="footer-right">
