--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 
     gtag('config', 'G-MNCHS7FWQQ');
   </script>
+  <!-- Google Adsense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5732957685888252"
   crossorigin="anonymous"></script>
 
