--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -98,3 +98,5 @@ layout: page
 {% if paginator.total_pages > 0 %}
   {% include post-paginator.html %}
 {% endif %}
+
+{% include ads-horizontal-long.html %}
