--- a/_includes/ads-in-article.html
+++ b/_includes/ads-in-article.html
@@ -1,12 +1,11 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5732957685888252"
      crossorigin="anonymous"></script>
-<!-- horizontal-long -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
      data-ad-client="ca-pub-5732957685888252"
-     data-ad-slot="3144411813"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="6187994668"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
