--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,6 +39,10 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   font-style: italic;
 }
 
+.item-desc {
+  white-space: pre-wrap;
+}
+
 .flex-container {
   display: flex;
   flex-direction: row;
