--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,6 +34,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 .regen-button {
   width: 20px;
   height: 20px;
+  padding-left: 2px;
 }
 
 .regen-button:hover {
@@ -59,6 +60,15 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 .flex-container {
   display: flex;
   flex-direction: row;
+}
+
+.npc-flex-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.npc-field {
+  flex: 1;
 }
 
 @media (max-width: 600px) {
