--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -10,7 +10,8 @@
   --main-border-color: rgb(44, 45, 45);
 
   /* Common color */
-  --text-color: rgb(175, 176, 177);
+  // --text-color: rgb(175, 176, 177);
+  --text-color: rgb(255, 255, 255);
   --text-muted-color: rgb(107, 116, 124);
   --heading-color: #cccccc;
   --blockquote-border-color: rgb(66, 66, 66);
@@ -29,7 +30,8 @@
 
   /* Sidebar */
   --sidebar-bg: radial-gradient(circle, #242424 0%, #1d1f27 100%);
-  --sidebar-muted-color: #6d6c6b;
+  // --sidebar-muted-color: #6d6c6b;
+  --sidebar-muted-color: rgb(255, 255, 255, 0.8);
   --sidebar-active-color: rgb(255, 255, 255, 0.8);
   --nav-cursor-color: rgb(183, 182, 182);
   --sidebar-btn-bg: rgb(117, 116, 116, 0.2);
