--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,6 +71,43 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   flex: 1;
 }
 
+.collapsible {
+  background-color: #868585fc;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  // background-color: #f1f1f1;
+  // color: black;
+}
+
+.collapsible:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: white;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+  color: white;
+}
+
 @media (max-width: 600px) {
   .flex-container {
     flex-direction: column;
