--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,11 +8,14 @@
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNCHS7FWQQ"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    console.log(document.location.hostname)
+    if (document.location.hostname == "ilootthebody.com") {
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-    gtag('config', 'G-MNCHS7FWQQ');
+      gtag('config', 'G-MNCHS7FWQQ');
+    }
   </script>
   <!-- Google Adsense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5732957685888252"
