--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNCHS7FWQQ"></script>
   <script>
     console.log(document.location.hostname)
-    if (document.location.hostname == "ilootthebody.com") {
+    if (document.location.hostname == "www.ilootthebody.com") {
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
