--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,6 +62,11 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   flex-direction: row;
 }
 
+.flex-container-col {
+  display: flex;
+  flex-direction: column;
+}
+
 .npc-flex-container {
   display: flex;
   align-items: baseline;
@@ -72,41 +77,60 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 }
 
 .collapsible {
-  background-color: #868585fc;
-  color: white;
+  background-color: transparent;
+  // color: white;
   cursor: pointer;
-  padding: 18px;
+  padding: .5em;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 1.2em;
 }
 
-.active, .collapsible:hover {
-  background-color: #555;
+.collapsible-active, .collapsible:hover {
+  background-color: #6B4A8C;
+  color: white;
 }
 
 .content {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  // background-color: #f1f1f1;
-  // color: black;
 }
 
-// .collapsible:after {
-//   content: '\02795'; /* Unicode character for "plus" sign (+) */
-//   font-size: 13px;
-//   color: white;
-//   float: right;
-//   margin-left: 5px;
-// }
+.collapsible::before {
+  content: '+';
+  font-size: 1em;
+  // color: white;
+  float: left;
+  margin-right: 1em;
+}
 
-// .active:after {
-//   content: "\2796"; /* Unicode character for "minus" sign (-) */
-//   color: white;
-// }
+.collapsible-active::before {
+  content: "-";
+  // color: white;
+}
+
+.arrow {
+  margin: 1em;
+}
+
+.arrow::before {
+  position: absolute;
+  content: '';
+  width: 0;
+  height: 0;
+  border: .5em solid transparent;
+  border-left-color: gray;
+  transform-origin: 0 50%;
+  transition: transform .25s;
+}
+
+.arrow.down::before {
+  transform: rotate(90deg);
+  transition: transform .25s;
+}
 
 @media (max-width: 600px) {
   .flex-container {
