--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -112,24 +112,16 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   // color: white;
 }
 
-.arrow {
-  margin: 1em;
+.padding-r10 {
+  padding-right: 10px;
 }
 
-.arrow::before {
-  position: absolute;
-  content: '';
-  width: 0;
-  height: 0;
-  border: .5em solid transparent;
-  border-left-color: gray;
-  transform-origin: 0 50%;
-  transition: transform .25s;
+.no-left-pad {
+  padding-left: 0;
 }
 
-.arrow.down::before {
-  transform: rotate(90deg);
-  transition: transform .25s;
+.margin-top-10 {
+  margin-top: 10px;
 }
 
 @media (max-width: 600px) {
