Created pf2e magic item generator and scripts. Added vertical sidebar ad.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,6 +46,8 @@ layout: default
       {% assign _include_path = _include | append: '.html' %}
       {% include {{ _include_path }} %}
     {% endfor %}
+
+    {% include ads-vertical.html %}
   </div>
 
 </div>
