--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   border-radius: 10px;
   font-size: 1.25em;
   margin-top: 2em;
+  margin-bottom: 4em;
 }
 
 .generator-button:hover {
