Fixed generated item name so the font color changes based on which theme is selected.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -88,7 +88,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   font-size: 1.5rem;
   font-weight: 400;
   font-family: Lato, "Microsoft Yahei", sans-serif;
-  color: black;
+  color: var(--heading-color);
 }
 
 .item-details {
