--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,7 +109,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   flex-direction: column;
 }
 
-.npc-flex-container {
+.npc-flex-container, .item-flex-container {
   display: flex;
   align-items: baseline;
 }
