Added social media include with buttons. Added sm include to homepage and generator pages. Removed social media from sidebar.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,4 +108,6 @@ layout: page
   {% include post-paginator.html %}
 {% endif %}
 
+{% include social-media-links.html %}
+
 {% include ads-horizontal-long.html %}
