--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,73 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 @import "{{ site.theme }}";
 
 /* append your custom style below */
+.sm-button {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  text-decoration: none;
+  margin-right: 4px;
+  border-radius: 10px;
+}
+
+.sm-button::before {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+
+.sm-button:hover {
+  opacity: 0.7;
+  color: white;
+}
+
+.fa-discord {
+  background: #7289da;
+  color: white;
+}
+
+.fa-instagram {
+  background: #f09433; 
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+  color: white;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-reddit {
+  background: #ff5700;
+  color: white;
+}
+
+.fa-twitch {
+  background: #6441A5;
+  color: white;
+}
+
+.fa-patreon {
+  background: black;
+  color: white;
+}
+
 .error-text {
   color: red;
 }
