--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,6 +100,10 @@ tail_includes:
   {{ content }}
 </div>
 
+{% include social-media-links.html %}
+
+{% include ads-in-article.html %}
+
 <div class="post-tail-wrapper text-muted">
 
   <!-- categories -->
